--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
     "tap": "^1.2.0"
   },
   "dependencies": {
-    "copy-browser-modules": "^1.0.0-0"
+    "copy-browser-modules": "^1.1.1"
   }
 }
