--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Copy browser modules into a flat tree for use",
   "main": "tasks/index.js",
   "scripts": {
-    "report": "nyc report --reporter=lcov",
-    "test": "nyc tap test.js && nyc report"
+    "test": "tap --coverage test.js"
   },
   "repository": {
     "type": "git",
@@ -24,9 +23,8 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-force-task": "^1.0.0",
-    "nyc": "^10.0.0",
     "rimraf": "^2.4.0",
-    "tap": "^9.0.3"
+    "tap": "^12.0.1"
   },
   "dependencies": {
     "copy-browser-modules": "^5.0.0"
